# saga-coordinator

./: .drone.yml  Cargo.toml  Dockerfile  Jenkinsfile
config/: development.toml  k8s.toml
docker/: Dockerfile.build  Dockerfile.run  Dockerfile.saga  docker-compose.yaml
src/: config.rs  create_account.rs  errors.rs  http.rs  lib.rs  main.rs  sentry_integration.rs
src/controller/: mod.rs  routes.rs
src/macros/: mod.rs  validation.rs
src/microservice/: billing.rs  delivery.rs  mod.rs  notifications.rs  orders.rs  stores.rs  users.rs  warehouses.rs
src/microservice/billing/: mod.rs
src/models/: base_product.rs  create_order.rs  create_profile.rs  create_store.rs  delivery.rs  mod.rs  moderate.rs  notifications.rs  roles.rs  visibility.rs  warehouses.rs
src/ops/: account.rs
src/services/: account.rs  delivery.rs  mod.rs  order.rs  store.rs  types.rs
