[package]
name = "saga_coordinator"
version = "0.1.0"
authors = ["root"]

[lib]
name = "saga_coordinator_lib"
path = "src/lib.rs"

[[bin]]
name = "saga_coordinator_runner"
path = "src/main.rs"

[dependencies]
log="0.4"
env_logger="0.5.6"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
config = "*"
failure = "*"
futures = "0.1.17"
futures-cpupool = "*"
hyper = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
stq_routes = { path = "vendor/libstqbackend/routes" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_http = { path = "vendor/libstqbackend/http" }
tokio-core = "*"
uuid = { version = "*", features = ["use_std", "v4", "serde"] }
validator = "0.6"
