[package]
name = "saga_coordinator"
version = "0.1.0"
authors = ["root"]

[lib]
name = "saga_coordinator_lib"
path = "src/lib.rs"

[[bin]]
name = "saga_coordinator_runner"
path = "src/main.rs"

[dependencies]
log="0.4"
env_logger="0.5.6"
chrono = { version = "0.4", features = ["serde"] }
config = "0.7"
failure = "0.1.1"
futures = "0.1.17"
futures-cpupool = "0.1.7"
hyper = "0.11"
regex = "0.2"
serde_json = "1.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
stq_routes = { path = "vendor/libstqbackend/routes" }
stq_router = { path = "vendor/libstqbackend/router" }
stq_http = { path = "vendor/libstqbackend/http" }
stq_static_resources = { path = "vendor/libstqbackend/static_resources" }
stq_types = { path = "vendor/libstqbackend/types" }
tokio-core = "0.1"
uuid = { version = "*", features = ["use_std", "v4", "serde"] }
validator = "0.6.3"
